<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="237dp"
        android:layout_height="237dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="17dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dongguk"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/tv_id"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/editText_ID"
            android:layout_width="270dp"
            android:layout_height="47dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="60dp"
            android:layout_height="47dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:text="@string/tv_pw"
            android:textAlignment="center"
            tools:layout_editor_absoluteY="467dp" />

        <EditText
            android:id="@+id/editText_PW"
            android:layout_width="270dp"
            android:layout_height="47dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="23dp"
            android:ems="10"
            android:hint="@string/pw"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:text="로그인" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="회원가입" />

</LinearLayout>